# GWToolboxpp

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  QUESTING_MODE_PLAN.md  build.ps1
.github/workflows/: cmake.yml
Dependencies/GWCA/include/GWCA/: GWCAVersion.h
Dependencies/GWCA/include/GWCA/Constants/: AgentIDs.h
Dependencies/GWCA/include/GWCA/GameContainers/: GamePos.h
Dependencies/GWCA/lib/: gwca.lib
Dependencies/gwca-decompile/: CMakeLists.txt  build.ps1  export_names.txt  exports.json
Dependencies/gwca-decompile/Source/: AgentMgr.cpp  CameraMgr.cpp  ChatMgr.cpp  Debug.cpp  EffectMgr.cpp  EventMgr.cpp  FriendListMgr.cpp  GWCA.cpp  GamePos.cpp  GameThreadMgr.cpp  GuildMgr.cpp  Hooker.cpp  ItemMgr.cpp  MapMgr.cpp  MemoryMgr.cpp  MemoryPatcher.cpp  MerchantMgr.cpp  PartyMgr.cpp  PlayerMgr.cpp  QuestMgr.cpp  RenderMgr.cpp  Scanner.cpp  Skill.cpp  SkillbarMgr.cpp  StoCMgr.cpp  TradeMgr.cpp  UIMgr.cpp
Dependencies/gwca-decompile/disasm/: AgentMgr.asm  CameraMgr.asm  ChatMgr.asm  EffectMgr.asm  EventMgr.asm  Frame.asm  FriendListMgr.asm  GWCA.asm  GameThreadMgr.asm  GuildMgr.asm  Hooker.asm  ItemMgr.asm  MapMgr.asm  MemoryMgr.asm  MemoryPatcher.asm  MerchantMgr.asm  PartyMgr.asm  PlayerMgr.asm  QuestMgr.asm  RenderMgr.asm  Scanner.asm  SkillbarMgr.asm  StoCMgr.asm  TradeMgr.asm  UIMgr.asm  Unknown.asm  summary.json
Dependencies/gwca-decompile/tools/: gwca_compare.py  gwca_disasm.py  gwca_exports.py  gwca_stub_gen.py
GWToolbox/: Download.cpp
GWToolboxdll/: CMakeLists.txt  Defines.h  GWToolbox.cpp  GWToolbox.h  Logger.cpp  main.cpp
GWToolboxdll/Modules/: CameraUnlockModule.cpp  ChatCommands.cpp  DiscordModule.cpp  InventoryManager.cpp  ItemTooltipModule.cpp  PluginModule.cpp  PluginModule.h  QuestModule.cpp  QuestModule.h  Resources.cpp  Resources.h  TextToSpeechModule.cpp  ToolboxSettings.cpp  Updater.cpp  Updater.h
GWToolboxdll/Utils/: TextUtils.cpp  TextUtils.h  ToolboxUtils.cpp  ToolboxUtils.h
GWToolboxdll/Widgets/: PartyDamage.cpp  TimerWidget.cpp  WorldMapWidget.cpp
GWToolboxdll/Widgets/Minimap/: AgentRenderer.cpp  AgentRenderer.h  CustomRenderer.h  Minimap.cpp
GWToolboxdll/Windows/: CompletionWindow.cpp  HeroBuildsWindow.cpp  InfoWindow.cpp  RerollWindow.cpp  TravelWindow.cpp  TravelWindow.h
cmake/: gwtoolboxdll_plugins.cmake  imgui.cmake
plugins/DaggerCombo/: DaggerCombo.cpp  DaggerCombo.h
plugins/SkillQueue/: SkillQueue.cpp  SkillQueue.h
